--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,13 +172,14 @@ p {
     font-size: 36px;
 }
 
-.footer {
+/* Change .footer to footer */
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
