--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,8 @@ p {
     font-size: 16px;
 }
 
-.hero {
+/* Change to figure */
+figure {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
@@ -70,7 +71,8 @@ p {
     margin-left: 25px;
 }
 
-.content {
+/* Change content to section */
+section {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
